--- a/static_files/app.css
+++ b/static_files/app.css
@@ -381,12 +381,16 @@ button:hover, input:hover, .clickable:hover {
 }
 
 #mainPage footer, #mainPage header {
-    min-height: 7rem;
+    min-height: 6.5rem;
 }
 
 #mainContent {
     flex-grow: 1;
     overflow: auto;
+}
+
+#mainPage .mainPageNav > svg {
+    height: 2.5rem;
 }
 
 #mainPage .mainPageNav > svg * {
@@ -395,7 +399,7 @@ button:hover, input:hover, .clickable:hover {
 
 #mainPage .mainPageNav > p {
     color: white;
-    margin: 0.5rem;
+    margin: 0.25rem;
     text-transform: capitalize;
 }
 
@@ -414,7 +418,7 @@ button:hover, input:hover, .clickable:hover {
 /* ============================== */
 
 #ratingsPage {
-    background-color: var(--gray200);
+    background-color: var(--gray100);
 }
 
 #ratingsPage .filterIcon > * {
@@ -430,7 +434,7 @@ button:hover, input:hover, .clickable:hover {
 
 #ratingsPage #filter {
     height: 3rem;
-    background-color: var(--gray300);
+    background-color: var(--gray200);
     position: relative;
     z-index: 2;
 
@@ -552,7 +556,7 @@ button:hover, input:hover, .clickable:hover {
     width: 1.5rem;
     text-align: center;
     font-size: 0.75rem;
-    height: 9rem;
+    height: 7rem;
     text-transform: capitalize;
     margin-right: 1.5rem;
 }
@@ -568,7 +572,7 @@ button:hover, input:hover, .clickable:hover {
 }
 
 #ratingsPage .gender.girl {
-    background-color: var(--pink400);
+    background-color: var(--pink300);
 }
 
 #ratingsPage .gender.unisex {
@@ -587,6 +591,11 @@ button:hover, input:hover, .clickable:hover {
     font-size: 2rem;
     font-weight: 600;
     color: var(--gray700);
+    text-transform: capitalize;
+}
+
+#ratingsPage .namePop .name.long {
+    font-size: 1rem;
 }
 
 #ratingsPage .namePop .popLabel {
@@ -618,23 +627,27 @@ button:hover, input:hover, .clickable:hover {
 #ratingsPage .starIcon {
     fill: var(--indigo200);
     stroke: var(--indigo200);
-    height: 2.5rem;
+    height: 2.25rem;
 }
 
 #ratingsPage .rating {
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-weight: 600;
     color: var(--gray700);
-    padding-left: 0.5rem;
+    padding-left: 0.2rem;
     padding-right: 0.75rem;
     margin: 0;
+    min-width: 3.75rem;
 }
 
 #ratingsPage .personRating *:first-child {
     font-weight: 500;
+    font-size: 0.8rem;
 }
 #ratingsPage .personRating *:last-child {
     font-size: 0.5rem;
+    margin-top: -0.2rem;
+    margin-bottom: 0.1rem;
 }
 #ratingsPage .personRating > * {
     margin: 0;
@@ -642,9 +655,9 @@ button:hover, input:hover, .clickable:hover {
 }
 #ratingsPage .personRating {
     border: solid thin;
-    border-radius: 0.5rem;
-    padding: 0.1rem 0.5rem;
-    margin-bottom: 0.3rem;
+    border-radius: 0.6rem;
+    padding: 0rem 0.3rem;
+    margin-bottom: 0.3rem
 }
 
 #ratingsPage .partnerRating {
