--- a/static_files/app.css
+++ b/static_files/app.css
@@ -381,7 +381,7 @@ button:hover, input:hover, .clickable:hover {
 }
 
 #mainPage footer, #mainPage header {
-    min-height: 6.5rem;
+    min-height: 5rem;
 }
 
 #mainContent {
@@ -656,7 +656,7 @@ button:hover, input:hover, .clickable:hover {
 #ratingsPage .personRating {
     border: solid thin;
     border-radius: 0.6rem;
-    padding: 0rem 0.3rem;
+    padding: 0.1rem 0.3rem;
     margin-bottom: 0.3rem
 }
 
@@ -689,5 +689,9 @@ button:hover, input:hover, .clickable:hover {
 
     #frontPage .leaves #leaves > g > path {
         transform: scale(1);
+    }
+
+    #mainPage footer, #mainPage header {
+        min-height: 6rem;
     }
 }
