--- a/static_files/app.css
+++ b/static_files/app.css
@@ -134,6 +134,7 @@ button:hover, input:hover, .clickable:hover {
 #frontPage #buttons button{
     margin-right: 1rem;
     width: 11rem;
+    max-width: 42.5vw;
     height: 3rem;
     border-radius: 0.5rem;
     font-size: 2rem;
@@ -250,6 +251,7 @@ button:hover, input:hover, .clickable:hover {
 #loginPage #buttons button{
     margin-right: 1rem;
     width: 11rem;
+    max-width: 42.5vw;
     height: 3rem;
     border-radius: 0.5rem;
     font-size: 2rem;
@@ -331,6 +333,7 @@ button:hover, input:hover, .clickable:hover {
 #signupPage #buttons button{
     margin-right: 1rem;
     width: 11rem;
+    max-width: 42.5vw;
     height: 3rem;
     border-radius: 0.5rem;
     font-size: 2rem;
@@ -501,9 +504,9 @@ button:hover, input:hover, .clickable:hover {
 }
 
 
-#ratingsPage #filterPillName:after {
-    content: '|';
-    margin-left: 0.3rem;
+#ratingsPage #filterPillName {
+    padding-right: 0.3rem;
+    border-right: solid thin;
 }
 
 #ratingsPage #filterPill svg {
