--- a/static_files/app.css
+++ b/static_files/app.css
@@ -644,6 +644,7 @@ button:hover, input:hover, .clickable:hover {
     padding-right: 0.75rem;
     margin: 0;
     min-width: 3.75rem;
+    text-align: center;
 }
 
 #ratingsPage .personRating *:first-child {
