--- a/static_files/app.css
+++ b/static_files/app.css
@@ -20,6 +20,10 @@ button:hover, input:hover, .clickable:hover {
     cursor: pointer;
 }
 
+.disabled:hover {
+    cursor: not-allowed;
+}
+
 .row {
     display: flex;
     flex-direction: row;
@@ -717,7 +721,7 @@ button:hover, input:hover, .clickable:hover {
 }
 
 #ratePage #rateName {
-    margin: 3.5rem 0 0 1.5rem;
+    margin: 0 0 0 1.5rem;
     color: white;
     font-weight: 600;
     text-transform: capitalize;
@@ -729,23 +733,14 @@ button:hover, input:hover, .clickable:hover {
 }
 
 #ratePage #rateGender {
-    position: absolute;
-    right: 0;
     padding: 1rem;
     background-color: rgba(0,0,0,0.1);
     border-radius: 0 0 0 1rem;
 }
 
-#ratePage #rateGender > svg > * {
-    stroke: white;
-}
 #ratePage #rateGender * {
     margin: 0;
     font-size: 1.25rem;
-}
-#ratePage #rateGender > svg {
-    margin-left: 0.5rem !important;
-    transform: scale(1.25);
 }
 
 #ratePage #rateGender * {
@@ -767,6 +762,7 @@ button:hover, input:hover, .clickable:hover {
 #ratePage #ratePop {
     margin-left: 1.25rem;
     margin-bottom: 0.5rem;
+    height: 1.5rem;
 }
 
 #ratePage #ratePop > svg {
@@ -827,6 +823,10 @@ button:hover, input:hover, .clickable:hover {
     margin: 0.5rem 0;
 }
 
+#ratePage .rating * {
+    user-select: none;
+}
+
 #ratePage .rating > *:first-child {
     font-size: 1.25rem;
     font-weight: 500;
@@ -843,18 +843,39 @@ button:hover, input:hover, .clickable:hover {
 #ratePage .rating > div {
     position: relative;
 }
-#ratePage .editIcon {
-    height: 1.25rem;
-    stroke-width: 0.15rem;
-    position: absolute;
-    left: -1.5rem;
+#ratePage .rating svg {
+    transform: scale(1.25);
+    stroke-width: 0.125rem;
 }
+
+#ratePage p.saveSpace {
+    margin: 0.5rem 0 0 0;
+    height: 1.25rem;
+    padding: 0.1rem 0.5rem;
+    border-radius: 0.725rem;
+}
+
+#ratePage .saveSpace.saveButton {
+    border: solid 0.1rem
+}
+
+#ratePage .saveSpace.saveButton.canSave{
+    color: var(--indigo700);
+    border-color: var(--indigo700);
+}
+
+#ratePage .saveSpace.saveButton.notCanSave{
+    color: var(--grey400);
+    border-color: var(--grey400);
+}
+
 #ratePage #ratingPartner > *:first-child{
     color: var(--gray500);
 }
 
-#ratePage #ratingPartner .ratingNumber {
+#ratePage #ratingPartner .ratingNumber, #ratePage #ratingPartner .ratingNumber *{
     color: var(--gray600);
+    stroke: var(--gray500);
 }
 
 #ratePage .ratingNumber {
@@ -862,6 +883,7 @@ button:hover, input:hover, .clickable:hover {
     text-align: center;
     font-size: 2.5rem;
     font-weight: 500;
+    height: 3rem;
     margin: 0;
 }
 
@@ -869,8 +891,8 @@ button:hover, input:hover, .clickable:hover {
     background-color: var(--grey200);
     border: none;
     outline: none;
-    margin-left: 0.5rem;
-    border-radius: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.75rem;
 }
 
 #ratePage #newRating {
